--- a/hangboard-app/requirements.txt
+++ b/hangboard-app/requirements.txt
@@ -3,3 +3,17 @@ HX711
 zmq
 #RPi.GPIO
 
+
+# For Socket
+#Flask==1.0.2
+Flask-Login==0.4.1
+Flask-Session==0.3.1
+Flask_SocketIO
+itsdangerous==1.1.0
+Jinja2==2.10
+MarkupSafe==1.1.0
+python-engineio
+python-socketio
+six==1.11.0
+Werkzeug==0.14.1
+
