--- a/hangboard-web/requirements.txt
+++ b/hangboard-web/requirements.txt
@@ -1,8 +1,4 @@
 Flask
-HX711 
-zmq
-#RPi.GPIO
-
 
 # For Socket
 #Flask==1.0.2
@@ -15,5 +11,5 @@ MarkupSafe==1.1.0
 python-engineio
 python-socketio
 six==1.11.0
-Werkzeug==0.15.3
+#Werkzeug==0.15.3
 
