--- a/hangboard-web/Dockerfile
+++ b/hangboard-web/Dockerfile
@@ -1,9 +1,15 @@
 # Hangboard Web
 FROM python:3.9
 
-WORKDIR app
-COPY * /app/
+WORKDIR /app
+COPY requirements.txt .
 RUN pip install -r requirements.txt
-CMD python3 main.py
 
-EXPOSE 5000 9090 9091
+ADD . /app/
+ADD ./static /app/static
+ADD ./templates /app/templates
+
+
+CMD python3 main.py --host 0.0.0.0 --port 8080
+
+EXPOSE 8080
