--- a/hangboardapp/package.json
+++ b/hangboardapp/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "react": "17.0.1",
     "react-native": "0.64.1",
+    "react-native-keep-awake": "^4.0.0",
     "react-native-sound": "^0.11.0"
   },
   "devDependencies": {
