--- a/hangboardapp/package.json
+++ b/hangboardapp/package.json
@@ -13,7 +13,8 @@
     "react": "17.0.1",
     "react-native": "0.64.1",
     "react-native-keep-awake": "^4.0.0",
-    "react-native-sound": "^0.11.0"
+    "react-native-sound": "^0.11.0",
+    "reconnecting-websocket": "^4.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.3",
