--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,19 +3,29 @@ services:
   web:
     build: ./hangboard-web
     ports: ['8080:8080']
+    restart: unless-stopped
   exercise:
     build: ./exercises
     ports: [4321:4321]
+    restart: unless-stopped
   force:
     build: ./hardware/force_sensors
     ports: [4322:4322]
+    restart: unless-stopped
+    #devices:
+    #  - /dev/gpiomem:/dev/gpiomem
   gyroscope:
     build: ./hardware/gyroscope
     ports: [4323:4323]
+    restart: unless-stopped
+    #devices:
+    #  - /dev/gpiomem:/dev/gpiomem    
   boards:
     build: ./boards
     ports: [4324:4324]
-#  sensors:
-#    build: ./hardware
+    restart: unless-stopped
+  #distance:
+  #  build: ./hardware/distance_sensors
+  #  ports: [4323:4323]
     #devices:
-    #  - /dev/gpiomem:/dev/gpiomem
+    #  - /dev/gpiomem:/dev/gpiomem    
