--- a/hangboardapp/package.json
+++ b/hangboardapp/package.json
@@ -5,28 +5,42 @@
   "scripts": {
     "android": "react-native run-android",
     "ios": "react-native run-ios",
+    "web": "react-scripts start",
     "start": "react-native start",
     "test": "jest",
     "lint": "eslint ."
   },
   "dependencies": {
     "react": "17.0.1",
+    "react-dom": "^17.0.2",
     "react-native": "0.64.1",
     "react-native-keep-awake": "^4.0.0",
     "react-native-sound": "^0.11.0",
+    "react-native-web": "^0.16.3",
+    "react-scripts": "^4.0.3",
     "reconnecting-websocket": "^4.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.3",
     "@babel/runtime": "^7.14.0",
     "@react-native-community/eslint-config": "^2.0.0",
-    "babel-jest": "^27.0.1",
     "eslint": "^7.27.0",
-    "jest": "^27.0.1",
     "metro-react-native-babel-preset": "^0.66.0",
     "react-test-renderer": "17.0.1"
   },
   "jest": {
     "preset": "react-native"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
