--- a/hangboardapp/package.json
+++ b/hangboardapp/package.json
@@ -17,8 +17,11 @@
     "react-native-keep-awake": "^4.0.0",
     "react-native-sound": "^0.11.0",
     "react-native-web": "^0.16.3",
+    "react-native-web-sound": "^0.1.1",
     "react-scripts": "^4.0.3",
-    "reconnecting-websocket": "^4.4.0"
+    "react-sound": "^1.2.0",
+    "reconnecting-websocket": "^4.4.0",
+    "use-sound": "^4.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.14.3",
