--- a/hangboardapp/package.json
+++ b/hangboardapp/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^17.0.2",
     "react-native": "0.64.1",
     "react-native-keep-awake": "^4.0.0",
+    "react-native-rabbitmq": "^0.6.7",
     "react-native-sound": "^0.11.0",
     "react-native-web": "^0.16.3",
     "react-native-web-sound": "^0.1.1",
