--- a/hangboardapp/ios/Podfile
+++ b/hangboardapp/ios/Podfile
@@ -1,7 +1,7 @@
 require_relative '../node_modules/react-native/scripts/react_native_pods'
 require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
 
-platform :ios, '10.0'
+platform :ios, '14.0'
 
 target 'hangboardapp' do
   config = use_native_modules!
@@ -21,7 +21,12 @@ target 'hangboardapp' do
   #
   # Note that if you have use_frameworks! enabled, Flipper will not work and
   # you should disable the next line.
-  use_flipper!()
+  use_frameworks!
+  #use_flipper!()
+  #pod 'react-native-rabbitmq', :path => '../node_modules/react-native-rabbitmq'
+  #pod 'RMQClient', :git => 'https://github.com/rabbitmq/rabbitmq-objc-client.git'
+  #pod 'RMQClient', '~> 0.11.0'
+
 
   post_install do |installer|
     react_native_post_install(installer)
