--- a/hangboardapp/package.json
+++ b/hangboardapp/package.json
@@ -15,12 +15,14 @@
     "react-dom": "^17.0.2",
     "react-native": "0.64.1",
     "react-native-keep-awake": "^4.0.0",
+    "react-native-rabbitmq": "^0.6.7",
     "react-native-sound": "^0.11.0",
     "react-native-web": "^0.16.3",
     "react-native-web-sound": "^0.1.1",
     "react-scripts": "^4.0.3",
     "react-sound": "^1.2.0",
     "reconnecting-websocket": "^4.4.0",
+    "rhea": "^2.0.2",
     "use-sound": "^4.0.0"
   },
   "devDependencies": {
