--- a/flutter_hangboard/pubspec.yaml
+++ b/flutter_hangboard/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_svg: ^0.22.0
 
 dev_dependencies:
   flutter_test:
@@ -52,6 +53,7 @@ flutter:
   #   - images/a_dot_ham.jpeg
   assets:
     - images/board.png
+    - images/board.svg
     - images/done.mp3
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
