--- a/flutter_hangboard/pubspec.yaml
+++ b/flutter_hangboard/pubspec.yaml
@@ -54,6 +54,7 @@ flutter:
   assets:
     - images/board.png
     - images/board.svg
+    - images/overlays/A1.svg
     - images/done.mp3
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
