--- a/hangboardapp/ios/Podfile
+++ b/hangboardapp/ios/Podfile
@@ -21,8 +21,8 @@ target 'hangboardapp' do
   #
   # Note that if you have use_frameworks! enabled, Flipper will not work and
   # you should disable the next line.
-  use_frameworks!
-  #use_flipper!()
+  #use_frameworks!
+  use_flipper!()
   #pod 'react-native-rabbitmq', :path => '../node_modules/react-native-rabbitmq'
   #pod 'RMQClient', :git => 'https://github.com/rabbitmq/rabbitmq-objc-client.git'
   #pod 'RMQClient', '~> 0.11.0'
