--- a/hangboardapp/package.json
+++ b/hangboardapp/package.json
@@ -11,11 +11,14 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "base-64": "^1.0.0",
     "react": "17.0.1",
     "react-dom": "^17.0.2",
     "react-native": "0.64.1",
+    "react-native-base64": "^0.2.1",
     "react-native-keep-awake": "^4.0.0",
     "react-native-sound": "^0.11.0",
+    "react-native-svg": "^12.1.1",
     "react-native-web": "^0.16.3",
     "react-native-web-sound": "^0.1.1",
     "react-scripts": "^4.0.3",
