--- a/flutter_hangboard/pubspec.yaml
+++ b/flutter_hangboard/pubspec.yaml
@@ -32,11 +32,14 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^0.22.0
   
-  provider: ^4.3.3
+  #provider: ^4.3.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  
+  #flutter_launcher_icons: "^0.8.0"
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
