--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -11,4 +11,6 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: subosito/flutter-action@v1
+      - run: cd flutter_hangboard ; flutter pub get
+      - run: cd flutter_hangboard ; flutter build web
       - uses: erickzanardo/flutter-gh-pages@v3
