--- a/.github/workflows/adoc.yaml
+++ b/.github/workflows/adoc.yaml
@@ -18,9 +18,9 @@ jobs:
           program: "asciidoctor -D docs --backend=html5 -o doc/html/index.html doc/Manual.adoc"
     - name: Print execution time
       run: echo "Time ${{ steps.adocbuild.outputs.time }}"
-#    - name: Deploy docs to ghpages
-#      uses: peaceiris/actions-gh-pages@v3
-#      with:
-#        deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
-#        publish_branch: gh-pages
-#        publish_dir: ./
+    - name: Deploy docs to ghpages
+      uses: peaceiris/actions-gh-pages@v3
+      with:
+        deploy_key: ${{ secrets.ACTIONS_DEPLOY_KEY }}
+        publish_branch: gh-pages
+        publish_dir: ./
