--- a/.github/workflows/adoc.yaml
+++ b/.github/workflows/adoc.yaml
@@ -15,7 +15,7 @@ jobs:
       id: adocbuild
       uses: tonynv/asciidoctor-action@master
       with:
-          program: "asciidoctor -D docs --backend=html5 -o doc/html/index.html doc/Manual.adoc"
+          program: "asciidoctor -D docs --backend=html5 -o index.html doc/Manual.adoc"
     - name: Print execution time
       run: echo "Time ${{ steps.adocbuild.outputs.time }}"
     - name: Deploy docs to ghpages
