--- a/.github/workflows/adoc.yaml
+++ b/.github/workflows/adoc.yaml
@@ -16,6 +16,13 @@ jobs:
       uses: tonynv/asciidoctor-action@master
       with:
           program: "asciidoctor -D ./doc --backend=html5 -o ./index.html doc/Manual.adoc"
+    - name: Doxygen
+      uses: mattnotmitt/doxygen-action@v1
+      id: doxybuild
+      #with: 
+      # additional-packages: font-fira-code
+      # working-directory: 'submodule/'
+      # doxyfile-path: 'docs/Doxygen'
     - name: Print execution time
       run: echo "Time ${{ steps.adocbuild.outputs.time }}"
     - name: Deploy docs to ghpages
