--- a/.github/workflows/adoc.yaml
+++ b/.github/workflows/adoc.yaml
@@ -16,12 +16,12 @@ jobs:
       uses: tonynv/asciidoctor-action@master
       with:
           program: "asciidoctor -D ./doc --backend=html5 -o ./index.html doc/Manual.adoc"
-    - name: Doxygen
-      uses: mattnotmitt/doxygen-action@v1
-      id: doxybuild
-      with: 
-          working-directory: '.'
-          doxyfile-path: ./Doxyfile
+    # - name: Doxygen
+    #   uses: mattnotmitt/doxygen-action@v1
+    #   id: doxybuild
+    #   with: 
+    #       working-directory: '.'
+    #       doxyfile-path: ./Doxyfile
     - name: Print execution time
       run: echo "Time ${{ steps.adocbuild.outputs.time }}"
     - name: Deploy docs to ghpages
