--- a/flutter_hangboard/pubspec.yaml
+++ b/flutter_hangboard/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   #provider: ^4.3.3
   fl_chart: ^0.36.1 
 
+  wakelock: ^0.5.2
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
