--- a/flutter_hangboard/pubspec.yaml
+++ b/flutter_hangboard/pubspec.yaml
@@ -32,9 +32,9 @@ dependencies:
   #cupertino_icons: ^1.0.2
   #flutter_svg: ^0.22.0
   
-  #provider: ^4.3.3
+  provider: ^5.0.0
   fl_chart: ^0.36.1 
-
+  mqtt_client: ^9.3.1
   wakelock: ^0.5.2
 
 dev_dependencies:
