--- a/backend/asyncapi.yaml
+++ b/backend/asyncapi.yaml
@@ -25,32 +25,11 @@ channels:
             command:
               type: string
               description: Command.      
-              pattern: '^Start .+$' 
-  light/gz1:
-    publish:
-      summary: Inform about environmental lighting conditions for a particular streetlight.
-      operationId: onLightMeasured1
-      message:
-        name: LightMeasured
-        payload:
-          type: object
-          properties:
-            id:
-              type: integer
-              minimum: 0
-              description: Id of the streetlight.
-            lumens:
-              type: integer
-              minimum: 0
-              description: Light intensity measured in lumens.
-            sentAt:
-              type: string
-              format: date-time
-              description: Date and time when the message was sent.          
+              pattern: '^Start .+$'     
   hangboard/workout/holds:
     subscribe:
       summary: Information on the currently used holds.
-      operationId: SetConfiguredHolds
+      operationId: GetConfiguredHolds
       message:
         name: Holds Used
         payload:
@@ -64,3 +43,48 @@ channels:
               type: string
               description: Right hold.
               examples: ["A7","A6"]
+  hangboard/workout/setinfo:
+    subscribe:
+      summary: Get information on the current set.
+      operationId: GetSetInfo
+      message:
+        name: Current Set
+        payload:
+          type: object
+          properties:
+            resttostart:
+              type: integer
+              minimum: 0 
+              description: Rest to start time in seconds.
+              examples: 5
+            exercise:
+              type: string
+              description: Exercise short description.
+              examples: ["Hang","Pull Up"]
+            counter:
+              type: integer
+              minimum: 0
+              description: How long to run in seconds or how much repetitions (for pull ups).
+              examples: 10
+            pause:
+              type: integer
+              minimum: 0 
+              description: Pause between the exercises in seconds.
+              examples: 5
+            reps:
+              type: integer
+              minimum: 0
+              description: Number of exercise repetitions in this set.
+              examples: 3
+            left:
+              type: string
+              description: Left hold to use.
+              examples: ["A1","JUG"]
+            right:
+              type: string
+              description: Right hold to use.
+              examples: ["A7","EDGE"]
+            type: 
+              type: string
+              description: Type of exercise.
+              examples: ["Hang", "Maximum Hang", "Pull Up"]
