--- a/.github/workflows/asyncapi.yaml
+++ b/.github/workflows/asyncapi.yaml
@@ -23,9 +23,9 @@ jobs:
       uses: asyncapi/github-action-for-generator@v1
       with:
         #template: '@asyncapi/html-template@0.9.0'  #In case of template from npm, because of @ it must be in quotes
-        template: '@asyncapi/html-template'  #In case of template from npm, because of @ it must be in quotes
+        template: '@asyncapi/html-template@0.15.4'  #In case of template from npm, because of @ it must be in quotes
         filepath: backend/asyncapi.yaml
-        parameters: baseHref=/test-experiment/ sidebarOrganization=byTags #space separated list of key/values
+        #parameters: baseHref=/test-experiment/ sidebarOrganization=byTags #space separated list of key/values
         output: generated-html
       
     #Using another action that takes generated HTML and pushes it to GH Pages
