--- a/.github/workflows/adoc.yaml
+++ b/.github/workflows/adoc.yaml
@@ -4,9 +4,9 @@ on:
   push:
     branches:
     - main
-    paths:
-    - backend
-    - doc
+    #paths:
+    #- backend
+    #- doc
 jobs:
   adoc_build:
     runs-on: ubuntu-18.04
