--- a/flutter_hangboard/pubspec.yaml
+++ b/flutter_hangboard/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   web_socket_channel: ^2.1.0
   audioplayers: ^0.19.0
   assets_audio_player: ^3.0.3+3
+  # audio_service: ^0.17.1 # non-stuttering audio?
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
