--- a/inactive_frontends/hangboardapp/package.json
+++ b/inactive_frontends/hangboardapp/package.json
@@ -17,6 +17,7 @@
     "react-native": "0.64.1",
     "react-native-base64": "^0.2.1",
     "react-native-keep-awake": "^4.0.0",
+    "react-native-native-mqtt": "^0.1.8",
     "react-native-sound": "^0.11.0",
     "react-native-svg": "^12.1.1",
     "react-native-web": "^0.16.3",
