--- a/.github/workflows/api.yaml
+++ b/.github/workflows/api.yaml
@@ -14,26 +14,26 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
-    - name: Get build container
-      id: adocbuild
-      uses: tonynv/asciidoctor-action@master
-      with:
-          program: "asciidoctor -D ./doc --backend=html5 -o ./index.html doc/Manual.adoc"
-    # - name: Doxygen
+    # - name: Get build container
+    #   id: adocbuild
+    #   uses: tonynv/asciidoctor-action@master
+    #   with:
+    #       program: "asciidoctor -D ./doc --backend=html5 -o ./index.html doc/Manual.adoc"
+    # # - name: Doxygen
     #   uses: mattnotmitt/doxygen-action@v1
     #   id: doxybuild
     #   with: 
     #       working-directory: '.'
     #       doxyfile-path: ./Doxyfile
 
-    # - name: Generating HTML from my AsyncAPI document
-    #   uses: asyncapi/github-action-for-generator@v1
-    #   with:
-    #     #template: '@asyncapi/html-template@0.9.0'  #In case of template from npm, because of @ it must be in quotes
-    #     template: '@asyncapi/html-template@0.15.4'  #In case of template from npm, because of @ it must be in quotes
-    #     filepath: backend/asyncapi.yaml
-    #     #parameters: baseHref=/test-experiment/ sidebarOrganization=byTags #space separated list of key/values
-    #     output: api
+    - name: Generating HTML from my AsyncAPI document
+      uses: asyncapi/github-action-for-generator@v1
+      with:
+        #template: '@asyncapi/html-template@0.9.0'  #In case of template from npm, because of @ it must be in quotes
+        template: '@asyncapi/html-template@0.15.4'  #In case of template from npm, because of @ it must be in quotes
+        filepath: backend/asyncapi.yaml
+        #parameters: baseHref=/test-experiment/ sidebarOrganization=byTags #space separated list of key/values
+        output: api
 
     - name: Print execution time
       run: echo "Time ${{ steps.adocbuild.outputs.time }}"
@@ -45,5 +45,5 @@ jobs:
         allow_empty_commit: false
         force_orphan: true
         publish_branch: gh-pages
-        publish_dir: ./
+        publish_dir: ./api
         keep_files: true
