--- a/backend/asyncapi.yaml
+++ b/backend/asyncapi.yaml
@@ -143,6 +143,22 @@ channels:
               type: number
               description: Countdown number - count every second downwards. Will be -1, when no full second crossed.
               examples: [-1, 10, 9, 8] #mosquitto_sub -h localhost -t  hangboard/workout/timerstatus
+            CurrentSet:
+              type: integer
+              description: Current set index in this workout.
+              example: 1
+            TotalSets:
+              type: integer
+              description: Total sets in workout.
+              example: 5
+            CurrentRep:
+              type: integer
+              description: Current repetition index in this set.
+              example: 2
+            TotalReps:
+              type: integer
+              description: Total repetitions in this set.
+              example: 5
   hangboard/workout/status:
     subscribe:
       summary: Current status of the workout backend.
